# robotics_benchmark_greenhouse

./: .gitignore  .gitmodules  LICENSE  README.md
benchmark_bringup/: setup.cfg
benchmark_bringup/benchmark_bringup/: CMakeLists.txt  package.xml  setup.py
benchmark_bringup/benchmark_bringup/benchmark_bringup/: odom_mvsim2TEB.py
benchmark_bringup/benchmark_bringup/benchmark_bringup/categories/: categorie_1.py  categorie_2.py  categorie_3.py
benchmark_bringup/benchmark_bringup/benchmark_bringup/plotter/: plotter_c1.py  plotter_c2.py  plotter_c3.py
benchmark_bringup/benchmark_bringup/categories/: Original.py  categorie_1.py  categorie_2.py
benchmark_bringup/benchmark_bringup/configuration/: c3_nav2_config.yaml
benchmark_bringup/benchmark_bringup/control_params/: c1_pid_params.yaml  c2_mpc_teb_params.yaml  c3_theta_star_params.yaml  greenhouse_params_real.yaml
benchmark_bringup/benchmark_bringup/definitions/robots/: agricobiot.vehicle.xml  husky-wheel.dae
benchmark_bringup/benchmark_bringup/definitions/sensors/: camera.sensor.xml  imu.sensor.xml
benchmark_bringup/benchmark_bringup/definitions/world/: greenhouse_control.world.xml  greenhouse_control_change_no_slope.world.xml  greenhouse_control_no_change_no_slope.world.xml  greenhouse_control_no_change_slope.world.xml
benchmark_bringup/benchmark_bringup/launch/: greenhouse_mcp_simulation_launch.py  launch_benchmark_bringup.launch.py  launch_slam_benchmark.launch.py  mvsim_mpc_nav2_bringup_launch.py  mvsim_mpc_nav2_localization_launch.py  mvsim_mpc_nav2_navigation_launch.py
benchmark_bringup/benchmark_bringup/maps/: greenhouse_benchmark.pgm  greenhouse_benchmark.yaml  greenhouse_map.pgm  greenhouse_map.yaml  greenhouse_test1.yaml  greenhouse_test2.yaml
benchmark_bringup/benchmark_bringup/params/: control_params.xml  greenhouse_params_real.yaml  nav2_slam_greenhouse.yaml
benchmark_bringup/benchmark_bringup/plotter/: plotter_c1.py  plotter_c3.py
benchmark_bringup/benchmark_bringup/rviz/: c2_greenhouse.rviz  c3_greenhouse.rviz  greenhouse.rviz  greenhouse_slam.rviz
benchmark_bringup/benchmark_msg/: CMakeLists.txt
benchmark_bringup/configuration/: c2_nav2_config.yaml  c3_nav2_config.yaml
benchmark_bringup/definitions/sensors/: gnss.sensor.xml  lidar2d.sensor.xml  rgbd_camera.sensor.xml
benchmark_bringup/launch/: launch_benchmark_bringup.launch.py  mvsim_mpc_nav2_bringup_launch.py  mvsim_mpc_nav2_localization_launch.py
benchmark_bringup/maps/: greenhouse_test1.pgm
benchmark_msg/: package.xml
benchmark_msg/msg/: BenchmarkParams.msg
