<?xml version="1.0"?>
<package format="3">
  <name>benchmark_msg</name>
  <version>0.0.1</version>
  <description>Message definitions for benchmark simulation</description>

  <maintainer email="fernando.ca@ual.es">Fernando Cañadas Aránega</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/FerCanAra/benchmark_robotics_greenhouse</url>

  <!-- Build -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>builtin_interfaces</build_depend>

  <!-- Runtime -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Required for interface packages -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
